--- a/Docs/Documentation.tex
+++ b/Docs/Documentation.tex
@@ -9,13 +9,19 @@
 \usepackage[english,german]{babel}
 % für Referenzen
 \usepackage{hyperref}
+% Für Anführungszeichen
+\usepackage{babel}
 
 \author{Baris,Tikir, Leon Dodrimong}
 \title{Smart Mirror}
+\date{
+\vspace{2cm}
+\includegraphics[width=110mm]{pictures/Bild-Spiegel.png}}
 
 \renewcommand*\contentsname{Inhaltsverzeichnis}
 \begin{document}
 \maketitle
+
 \newpage
 \tableofcontents
 \newpage
@@ -49,8 +55,4 @@ Wir sind zwei Studenten, Baris Tikir und Leon Dodrimong, von der HTW - Hochschul
 \includegraphics[width=130mm]{pictures/KomponentenDiagramm.png}
 \caption{Komponentendiagramm-Diagramm}
 \end{figure}
-\newpage
-\subsection{Verweise}
-\subsection{Anmerkungen}
-
 \end{document}
